# nickit

./: LICENSE  README.md  pyproject.toml  ruff.toml
src/nickit/: constants.py  main.py  message.py  version.py
src/nickit/init/: __init__.py  project.py
