[project]
name = "nickit"
version = "0.0.2"
authors = [
    { name="Hector", email="hectormontoyadeveloper@gmail.com" }
]
description = "An interesting cli to improve the development experience on python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.26.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/hecmondev/nickit"
Issues = "https://github.com/hecmondev/nickit"

[project.scripts]
nic = "nickit.main:run"
